# vision_slam_frontend

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_ubuntu.sh  jenkins-ci-build.sh  manifest.xml  package.xml  profile  test.bag  visualization.rviz
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin  .rosinstall  setup.sh
gtest/: Makefile  cmake_install.cmake
gtest/gtest/: Makefile
msg/: CameraExtrinsics.msg  CameraIntrinsics.msg  FeatureMatch.msg  Keypoints.msg  Match.msg  Matches.msg  OdometryFactor.msg  RobotPose.msg  SLAMNode.msg  SLAMProblem.msg  VisionCorrespondence.msg  VisionCorrespondencePair.msg  VisionFactor.msg  VisionFeature.msg
src/: gui_helpers.cc  gui_helpers.h  math_util.h  slam-frontend-main.cc  slam-frontend.cc  slam-frontend.h  slam-main.cc  slam_config.cc  slam_config.h  slam_frame.cc  slam_frame.h  slam_frontend.cc  slam_frontend.h  slam_frontend_backend_comm.cc  slam_frontend_backend_comm.h  slam_frontend_main.cc  slam_to_ros.h  slam_types.h  timer.cc  timer.h  vio_types.h
src/test/: bag_extract.cc  slam_test.cc
