<package>
    <name>vision_slam_frontend</name>
    <version>1.0.0</version>
    <description>The feature extraction half of the slam problem</description>
    <maintainer email="jbachman@umass.edu">John Bachman</maintainer>
    <license>GNU</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
</package>
